python-k3s-example-2/project/k3s/deployment-file-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-service
  template:
    metadata:
      labels:
        app: file-service
    spec:
      containers:
      - name: file-service
        image: file_service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /data
          name: file-storage
      volumes:
      - name: file-storage
        persistentVolumeClaim:
          claimName: file-upload-pvc
