python-k3s-example-2/project/k3s/service-file-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-service
spec:
  type: ClusterIP
  selector:
    app: file-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
