python-k3s-example-2/project/k3s/service-md5sum.yaml
apiVersion: v1
kind: Service
metadata:
  name: md5sum-service
spec:
  type: ClusterIP
  selector:
    app: md5sum-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
